syntax = "proto3";

package llmoperator.models.server.v1;

import "google/api/annotations.proto";

option go_package = "github.com/llm-operator/model-manager/api/v1";

// The API specification fllows OpenAPI API specification (https://platform.openai.com/docs/api-reference/models).

message Model {
  string id = 1;
  int64 created = 2;
  string object = 3;
  string owned_by = 4;
}

message ListModelsRequest {
}

message ListModelsResponse {
  string object = 1;
  repeated Model data = 2;
}

message GetModelRequest {
  string id = 1;
}

message DeleteModelRequest {
  string id = 1;
}

message DeleteModelResponse {
  string id = 1;
  string object = 2;
  bool deleted = 3;
}

message ListBaseModelsRequest {
}

message BaseModel {
  string id = 1;
  int64 created = 2;
  string object = 3;
}

message ListBaseModelsResponse {
  string object = 1;
  repeated BaseModel data = 2;
}

service ModelsService {
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option (google.api.http) = {
      get: "/v1/models"
    };
  }

  rpc GetModel(GetModelRequest) returns (Model) {
    option (google.api.http) = {
      get: "/v1/models/{id}"
    };
  }

  rpc DeleteModel(DeleteModelRequest) returns (DeleteModelResponse) {
    option (google.api.http) = {
      delete: "/v1/models/{id}"
    };
  }

  // The following API endpoints are not part of the OpenAPI API specification.
  rpc ListBaseModels(ListBaseModelsRequest) returns (ListBaseModelsResponse) {
    option (google.api.http) = {
      get: "/v1/basemodels"
    };
  }

}

message RegisterModelRequest {
  string base_model = 1;
  string suffix = 2;
  string tenant_id = 3;
  string organization_id = 4;
  string project_id = 5;
}

message RegisterModelResponse {
  string id = 1;
  // path is the path where the model is stored.
  string path = 2;
}

message PublishModelRequest {
  string id = 1;
}

message PublishModelResponse {
}

message GetModelPathRequest {
  string id = 1;
}

message GetModelPathResponse {
  string path = 1;
}

message CreateBaseModelRequest {
  string id = 1;
  string path = 2;
  string gguf_model_path = 3;
}

message GetBaseModelPathRequest {
  string id = 1;
}

message GetBaseModelPathResponse {
  string path = 1;
  string gguf_model_path = 2;
}

// TODO(kenji): Consider renaming this service as all RPC endpoints are
// called from components that can run in worker k8s clusters (not in the
// control plane k8s cluster).
service ModelsInternalService {
  // ListModels lists models. Used by inference-manager-engine.
  // TODO(kenji): Replace this with GetModel.
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
  }

  // RegisterModel registers a new fine-tuned model. Used by job-manager-dispatcher.
  // The model is not published until PublishModel is called.
  rpc RegisterModel(RegisterModelRequest) returns (RegisterModelResponse) {
  }

  // PublishModel publishes the fine-tuned model. Used by job-manager-dispatcher.
  rpc PublishModel(PublishModelRequest) returns (PublishModelResponse) {
  }

  // GetModelPath returns the path of the model. Used by inference-manager-engine.
  rpc GetModelPath(GetModelPathRequest) returns (GetModelPathResponse) {
  }

  // CreateBaseModel creates a new base model. Used by model-manager-loader.
  rpc CreateBaseModel(CreateBaseModelRequest) returns (BaseModel) {
  }

  // GetBaseModelPath returns the path of the base model. Used by job-manager-dispatcher,
  // inference-manager-engine, and model-manager-loader.
  rpc GetBaseModelPath(GetBaseModelPathRequest) returns (GetBaseModelPathResponse) {
  }
}
